<resources>
    <string name="app_name">WBcontrol</string>
    <string name="device">Device</string>
    <string name="name" translatable="false">Name</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="app_starting">WBcontrol starting..</string>
    <string name="pause_all">Pause all</string>
    <string name="stop_all">Stop all</string>
    <string name="Rangieren">shunt</string>
    <string name="start" translatable="false">Start</string>
    <string name="stop" translatable="false">Stop</string>
    <string name="vorwaerts" translatable="false">&gt;</string>
    <string name="rueckwaerts" translatable="false">&lt;</string>
    <string name="speed_is" translatable="false">Speed=</string>
<string name="b_action">Action</string>
    <string name="ctrl_ts" translatable="false">TS=</string>
    <string name="ctrl_us" translatable="false">Us=%1$s</string>
    <string name="ctrl_pauseall_active">PauseAll was triggered!</string>
    <string name="ctrl_stopall_active">StopAll was triggered!</string>
    <string name="ctrl_ts_rcv_error">Received TrainSpeed-msg, but CCDevice = null.</string>
    <string name="ctrl_dev_disconnect_error">Error disconnecting device:</string>
    <string name="b_cfg">CFG</string>
<string name="b_control">CTRL</string>
    <string name="b_exit">exit</string>
<string name="b_loks">Locos</string>
    <string name="b_macro">Macro</string>
    <string name="b_test">Test</string>
    <string name="header_cfg">Basic settings</string>
    <string name="loks_sw">Loco software:</string>
    <string name="loks_protocol">Protocol:</string>
    <string name="loks_owner">Owner:</string>
    <string name="loks_type">Loco-Typ:</string>
    <string name="loks_wlan">WIFI-module:</string>
    <string name="loks_pwmf">Motor PWM-frequency</string>
    <string name="loks_motorcontrol">Motor control</string>
    <string name="loks_adc" translatable="false">ADC</string>
    <string name="loks_opt_props">optional properties:</string>
    <string name="cfg_titel">Basic settings</string>
    <string name="cfg_ip">manual Loco-IP</string>
    <string name="cfg_tcpport" translatable="false">tcp-Server-Port</string>
    <string name="cfg_udpport" translatable="false">udp-Port</string>
    <string name="cfg_speedsteps">Speedsteps</string>
    <string name="cfg_rangiermax">ShuntingSpeed max</string>
    <string name="cfg_use_server">use server</string>
    <string name="cfg_master">I\'m Mastercontroller</string>
    <string name="cfg_testmode">Testmode</string>
    <string name="cfg_protocol">Protocol</string>
    <string name="end_info2">Alle Verbindungen wurden getrennt, Dienste beendet..</string>
    <string name="end_info1">All connections and background-services are being shut down..</string>
    <string name="end_info_upd">Updating software: All connections and background-services are being shut down..</string>
    <string name="end_restart" translatable="false">Restart</string>
    <string name="prot_wbcontrol_cmd_back" translatable="false">&lt;richtung:rw&gt;</string>
    <string name="prot_wbcontrol_cmd_forward" translatable="false">&lt;richtung:vw&gt;</string>
    <string name="prot_wbcontrol_cmd_atconnect" translatable="false">&lt;hwget&gt;&lt;swget&gt;&lt;fpwmget&gt;</string>
    <string name="macro_edit_macro_edit">Edit macro</string>
    <string name="macro_edit_event_edit">Edit event</string>
    <string name="macro_edit_rfid_edit">Edit RFID</string>
    <string name="comment">Description</string>
    <string name="rfid_code" translatable="false">RFID-Code</string>
    <string name="test_titel_log" translatable="false">Log</string>
    <string name="startup_dontconnect">start without a connection</string>
    <string name="startup_enter_ip">manual connection (select = long click)</string>
    <string name="startup_titel_devauswahl">Choose loco-connection</string>
    <string name="mnu_ctrl" translatable="false">Control</string>
    <string name="mnu_action" translatable="false">Action</string>
    <string name="mnu_loks" translatable="false">Loks</string>
    <string name="mnu_loks2" translatable="false">Loks2</string>
    <string name="mnu_macro" translatable="false">Macro</string>
    <string name="mnu_cfg">Settings</string>
    <string name="mnu_help">Help</string>
    <string name="mnu_test" translatable="false">Test</string>
    <string name="mnu_exit" translatable="false">Shutdown</string>
    <string name="mnu_cfg_short">Set</string>
    <string name="mnu_add_item">new</string>
    <string name="mnu_delete_item">delete</string>
    <string name="device_none_selected">no device selected</string>
    <string name="disconnect">Disconnect</string>
    <string name="mnu_action_add">Add element</string>
    <string name="mnu_action_move">Move element </string>
    <string name="mnu_action_edit">Edit element</string>
    <string name="mnu_action_del">Remove element</string>
    <string name="mnu_action_exit">Exit edit mode</string>
    <string name="action_text">Text</string>
    <string name="action_button">Button</string>
    <string name="action_picbutton">PictureButton</string>
    <string name="action_pic">Picture</string>
    <string name="action_ae_edit_titel_new">new element</string>
    <string name="action_ae_edit_titel_edit">change element</string>
    <string name="action_macro">Macro</string>
    <string name="action_ae_edit_scope">for devices</string>
    <string name="action_ae_edit_scopedata_type">types</string>
    <string name="action_edit_layout">edit layout</string>
    <string name="action_titel">Action</string>
    <string name="action_addae">add element</string>
    <string name="gen_close">Close</string>
    <string name="help_action">Use the context-menu to changed or deleted an element (by long-clicking).</string>
    <string name="action_help_titel">Infos</string>
    <string name="test_update_log" translatable="false">Update Log</string>
    <string name="control_rampe">Ramp</string>
    <string name="control_dialog_ramp_plus" translatable="false">+</string>
    <string name="control_dialog_ramp_minus" translatable="false">-</string>
    <string name="control_dialog_ramp_titel">Speed ramp</string>
    <string name="gen_connected">connected</string>
    <string name="control_dialog_disconnect_titel">disconnect</string>
    <string name="control_dialog_disconnect_txt">Disconnect network-connection to controlled device? </string>
    <string name="gen_cancel">Cancel</string>
    <string name="cfg_loglevel" translatable="false">Loglevel</string>
    <string name="get_not_connected">not connected</string>
    <string name="test_dev_adddev">Add device</string>
    <string name="test_dialog_adddev_titel">Add Loco</string>
    <string name="test_dialog_adddev_name" translatable="false">Name</string>
    <string name="test_dialog_adddev_ip">IP-address</string>
    <string name="test_dialog_adddev_isman">(created manually)</string>
    <string name="mnu_testdevs_edit">Edit</string>
    <string name="mnu_testdevs_del">Remove</string>
    <string name="test_dialog_editdev_titel">Edit Loco</string>
    <string name="startup_retry">retry..</string>
    <string name="action_macro_on">Macro On</string>
    <string name="action_macro_off">Macro Off</string>
    <string name="mnu_macro_del">Delete</string>
    <string name="mnu_macro_new">Add new Macro </string>
    <string name="mnu_macro_copy">Copy</string>
    <string name="macro_adddev_enternewname">enter devicename manually (long click to select)</string>
    <string name="macro_adddev_choosefromlist">or choose from list:</string>
    <string name="test_log_info">entries</string>
    <string name="log_saved">Log has been saved to the logfile.</string>
    <string name="gen_not_ipv4">not a valid ipv4-address!</string>
    <string name="gen_not_int">not a valid input (number must be 0 to 65535)</string>
    <string name="cfg_screensaver">Screensaver</string>
    <string name="b_changesize">big&lt;-&gt;small</string>
    <string name="gen_ready">ready</string>
    <string name="mnu_lokpic_camera">Take a new picture</string>
    <string name="mnu_lokpic_gallery">choose picture from gallery</string>
    <string name="gen_gets_disconnected">Disconnecting</string>
    <string name="gen_delete">Delete</string>
    <string name="action_ae_edit_datatype">datatype</string>
    <string name="action_ae_edit_location">Display area</string>
    <string name="action_ae_edit_scopedata_datasource">datasource</string>
    <string name="dialog_cfl_title">Deviceselection</string>
    <string name="dialog_cfl_spinnerinfo">Devicetype</string>
    <string name="dialog_cfl_adddev" translatable="false">+</string>
    <string name="gen_add" translatable="false">+</string>
    <string name="dialog_cfl_ccd">currently controlled device</string>
    <string name="mnu_lokpic_edit">Edit picture</string>
    <string name="gen_minus" translatable="false">-</string>
    <string name="macro_edit_remdev_msg">Really removing this device from the macro?</string>
    <string name="macro_edit_remdev_title">Title</string>
    <string name="gen_no">No</string>
    <string name="gen_yes">Yes</string>
    <string name="track_tools">Tools</string>
    <string name="trackview_new_trackplan">new layout</string>
    <string name="trackview_trackelement_unknown">unknown</string>
    <string name="trackplan_dialog_planname_title">existing layouts</string>
    <string name="trackplan_dialog_actions_title">Actions</string>
    <string name="trackplan_dialog_planname_new">*new plan*</string>
    <string name="trackplan_edit">edit</string>
    <string name="trackplan_actions">Menu</string>
    <string name="trackplan_dialog_plandel_title">Choose layout to delete</string>
    <string name="dialog_upd_msgtxt">A new version of WBcontrol is available online. Do you want to download and install it now?</string>
    <string name="dialog_upd_bt_later">Later</string>
    <string name="dialog_upd_bt_download">only download</string>
    <string name="dialog_upd_bt_dlandinst">install now</string>
   <string name="dialog_hkey_keytype">Key-typ</string>
   <string name="dialog_hkey_function">Function</string>
   <string name="dialog_hkey_customname_info">custom name for this key</string>
   <string name="dialog_hkey_keyinfo">Hardwarekey</string>
   <string name="dialog_hkey_function2">Function 2</string>
   <string name="dialog_hkey_macro1" translatable="false">Macro 1</string>
   <string name="dialog_hkey_macro2" translatable="false">Macro 2</string>
   <string name="mitlic">Copyright &#169; 2016 Michael Brunnbauer\n\nPermission is hereby granted, free of charge, to any person obtaining a copy of this software and associated documentation files (the "Software"), to deal in the Software without restriction, including without limitation the rights to use, copy, modify, merge, publish, distribute, sublicense, and/or sell copies of the Software, and to permit persons to whom the Software is furnished to do so, subject to the following conditions:\n\nThe above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.\n\nTHE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY, FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE SOFTWARE.</string>
   <string name="tou_msg">This software is for testing purpose. Use it with care and only with your cheapest locos! Please read the licensing information and acknowledge the terms of use.</string>
   <string name="tou_sum">I agree</string>
   <string name="tou_lic_title_hidden">License &#9658;</string>
</resources>