<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  android:orientation="vertical"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
    <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/textView_mace_titel" android:textAppearance="@style/txt_headline_standard" android:layout_marginBottom="10dip" android:layout_gravity="center_horizontal" android:layout_marginTop="10dip" android:text="@string/macro_edit_macro_edit"></TextView>
    <LinearLayout android:layout_height="wrap_content" android:id="@+id/linearLayout1" android:layout_width="fill_parent" android:layout_marginBottom="10dip">
        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/textView_mace_name" android:textAppearance="@style/txt_normal_standard" android:layout_marginLeft="10dip" android:text="@string/name"></TextView>
        <EditText android:layout_height="wrap_content" android:layout_weight="1" android:layout_width="wrap_content" android:id="@+id/editText_mace_name" android:layout_marginLeft="10dip" android:layout_marginRight="10dip">
            <requestFocus></requestFocus>
        </EditText>
    </LinearLayout>
    <LinearLayout android:id="@+id/linearLayout5" android:layout_height="wrap_content" android:layout_width="fill_parent">
        <TextView android:layout_marginLeft="10dip" android:textAppearance="@style/txt_normal_standard" android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/textView_mace_rfid" android:text="@string/rfid_code"></TextView>
        <EditText android:layout_weight="1" android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_marginLeft="10dip" android:layout_marginRight="10dip" android:id="@+id/editText_mace_rfid" android:layout_marginBottom="10dip"></EditText>
    </LinearLayout>
    <LinearLayout android:layout_height="wrap_content" android:id="@+id/linearLayout2" android:layout_width="fill_parent" android:layout_marginBottom="10dip">

        <TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:textAppearance="@style/txt_normal_standard" android:layout_marginLeft="10dip" android:text="@string/device" android:id="@+id/textView_mace_device"></TextView>
        <Spinner android:layout_height="wrap_content" android:layout_width="wrap_content" android:layout_marginLeft="10dip" android:id="@+id/spinner_mace_device"></Spinner>
        <Button android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="10dip" android:layout_marginRight="10dip" android:id="@+id/button_mace_device_add" android:text="@string/gen_add" android:paddingLeft="15dip" android:paddingRight="15dip"></Button>

        <Button
            android:id="@+id/button_mace_device_del"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            android:paddingLeft="15dip"
            android:paddingRight="15dip"
            android:text="@string/gen_minus" />

    </LinearLayout>
    <EditText android:layout_height="wrap_content" android:layout_width="fill_parent" android:inputType="textMultiLine" android:id="@+id/editText_mace_cmds" android:layout_marginRight="10dip" android:layout_marginLeft="10dip" android:layout_marginBottom="10dip" android:layout_weight="1" android:autoLink="none"></EditText>
    <LinearLayout android:layout_height="wrap_content" android:id="@+id/linearLayout3" android:layout_width="fill_parent" android:layout_marginBottom="10dip">
        <TextView android:layout_height="wrap_content" android:layout_width="wrap_content" android:id="@+id/textView_mace_comment" android:text="@string/comment" android:layout_marginLeft="10dip"></TextView>
        <EditText android:layout_height="wrap_content" android:layout_weight="1" android:layout_width="wrap_content" android:layout_marginLeft="10dip" android:layout_marginRight="10dip" android:id="@+id/editText_mace_comment"></EditText>
    </LinearLayout>
    <LinearLayout android:layout_height="wrap_content" android:id="@+id/linearLayout4" android:layout_width="fill_parent" android:layout_marginBottom="5dip">
        <Button android:layout_height="wrap_content" android:id="@+id/button_mace_save" android:layout_width="wrap_content" android:layout_weight="1" android:text="@string/gen_ready"></Button>
        <Button android:layout_height="wrap_content" android:id="@+id/button_mace_cancel" android:layout_width="wrap_content" android:layout_weight="1" android:text="@string/cancel"></Button>
    </LinearLayout>
    
</LinearLayout>
