<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/space_std_h"
    android:orientation="vertical"
    android:padding="4dp" >

    <LinearLayout
        android:id="@+id/LinearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_std_h"
        android:layout_marginTop="@dimen/space_std_h" >

        <TextView
            android:id="@+id/textView_keyinfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/space_std_h"
            android:text="@string/dialog_hkey_keyinfo"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textView_keycodename"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="TextView"
            android:textAppearance="?android:attr/textAppearanceLarge" />

    </LinearLayout>

    <TextView
        android:id="@+id/textView_customname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_std_h"
        android:text="@string/dialog_hkey_customname_info" />

    <EditText
        android:id="@+id/editText_customname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_std_h"
        android:layout_marginTop="@dimen/space_std_h"
        android:ems="10"
        android:inputType="text" >

        <requestFocus />
    </EditText>

    <LinearLayout
        android:id="@+id/LinearLayout_key1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_std_h"
        android:layout_marginTop="@dimen/space_std_h"
        android:baselineAligned="false" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView_keytype"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_hkey_keytype" />

            <Spinner
                android:id="@+id/spinner_keytype"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView_key_function"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_hkey_function" />

            <Spinner
                android:id="@+id/spinner_key_function"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/textView_key_function2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_std_h"
        android:text="@string/dialog_hkey_function2" />

    <Spinner
        android:id="@+id/spinner_key_function2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_std_h" />

    <TextView
        android:id="@+id/textView_key_macro1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_std_h"
        android:text="@string/dialog_hkey_macro1" />

    <Spinner
        android:id="@+id/spinner_key_macro1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_std_h" />

    <TextView
        android:id="@+id/textView_key_macro2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_std_h"
        android:text="@string/dialog_hkey_macro2" />

    <Spinner
        android:id="@+id/spinner_key_macro2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/space_std_h" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/space_std_h" >

        <Button
            android:id="@+id/button_dialog_hk_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="24dp"
            android:text="@string/save" />

        <Button
            android:id="@+id/button_dialog_hk_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="24dp"
            android:text="@string/gen_cancel" />

    </LinearLayout>

</LinearLayout>
