<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:orientation="vertical"
        android:padding="@dimen/space_std_h" >
    
    <TextView
        android:id="@+id/textView_dialog_update_msg"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_upd_msgtxt"
        android:textAppearance="?android:attr/textAppearanceSmall" />
    
    <Button
        android:id="@+id/button_dialog_update_later"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/space_std_h"
        android:paddingBottom="@dimen/space_std_h"
        android:paddingTop="@dimen/space_std_h"
        android:text="@string/dialog_upd_bt_later" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:paddingTop="@dimen/space_std_h" >

        <Button
            android:id="@+id/button_dialog_update_download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/space_std_w"
            android:paddingBottom="@dimen/space_std_h"
            android:paddingTop="@dimen/space_std_h"
            android:text="@string/dialog_upd_bt_download" />

        <Button
            android:id="@+id/button_dialog_update_dlandinst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/space_std_w"
            android:paddingBottom="@dimen/space_std_h"
            android:paddingTop="@dimen/space_std_h"
            android:text="@string/dialog_upd_bt_dlandinst" />

    </LinearLayout>

</LinearLayout>