<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal" >
    <TextView
        android:id="@+id/textView_dialog_update_msg"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="12dp"
        android:text="@string/dialog_upd_msgtxt"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:textSize="14sp" />

    <Button
        android:id="@+id/button_dialog_update_later"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="false"
        android:layout_below="@+id/textView_dialog_update_msg"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:minWidth="64dip"
        android:text="@string/dialog_upd_bt_later"
        android:textSize="14sp" />
    
    <Button
        android:id="@+id/button_dialog_update_download"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/button_dialog_update_later"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:minWidth="64dip"
        android:text="@string/dialog_upd_bt_download"
        android:textSize="14sp" />
    
    <Button
        android:id="@+id/button_dialog_update_dlandinst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/button_dialog_update_download"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="6dp"
        android:layout_marginRight="6dp"
        android:minWidth="64dip"
        android:text="@string/dialog_upd_bt_dlandinst"
        android:textSize="14sp" />

</RelativeLayout>